--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
-    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-stage-2": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "fast-sass-loader": "^1.4.7",
     "file-loader": "^3.0.1",
@@ -35,5 +36,7 @@
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.18.0"
+  }
 }
