--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-stage-2": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
+    "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "fast-sass-loader": "^1.4.7",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "style-loader": "^0.23.1",
