downloadable, fixed black bg on windows

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "downloadjs": "^1.4.7"
   }
 }
