--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "downloadjs": "^1.4.7",
-    "lodash.throttle": "^4.1.1"
+    "downloadjs": "^1.4.7"
   }
 }
