--- a/netlify.toml
+++ b/netlify.toml
@@ -7,4 +7,4 @@
 [build]
   command = "npm run-script build"
   publish = "dist"
-  functions = "functions"
+  functions = ".netlify/functions-build"
