update production update bracket function location

--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -8,4 +8,4 @@ on:
       runs-on: ubuntu-latest
       steps:
         - name: Curl Request
-          run: curl -X GET https://funcs--circlebracket.netlify.com/.netlify/functions/update-live-bracket
+          run: curl -X GET https://circlebracket.netlify.com/.netlify/functions/update-live-bracket
