--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: Update Live Bracket
 on:
   schedule:
-    - cron: '*/15 11-23 * 3,4 0,4,5,6'
+    - cron: '*/15 0,11-23 * 3,4 0,4,5,6'
 jobs:
   update:
     name: Request Update Function
     runs-on: ubuntu-latest
     steps:
       - name: Curl Request
-        run: curl -X GET https://circlebracket.netlify.com/.netlify/functions/update-live-bracket
+        run: curl -X GET https://circlebracket.netlify.app/.netlify/functions/update-live-bracket
