--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:open": "npx cypress open --config baseUrl=http://localhost:8080",
+    "cy:run": "npx cypress run --config baseUrl=http://localhost:8080",
     "start": "nodemon --watch \"webpack.*.js\" --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production",
     "serve": "serve dist",
@@ -17,6 +19,7 @@
   "author": "Jody Mickey <jody.mickey@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.23.9",
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -28,9 +31,11 @@
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^2.1.1",
+    "cypress": "^9.5.2",
     "fast-sass-loader": "^1.5.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "netlify-plugin-cypress": "^2.2.0",
     "node-sass": "^7.0.0",
     "nodemon": "^1.19.4",
     "style-loader": "^0.23.1",
@@ -44,6 +49,7 @@
   "dependencies": {
     "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
+    "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
     "esm": "^3.2.25",
     "netlify-lambda": "^1.6.3"
