--- a/package.json
+++ b/package.json
@@ -12,38 +12,43 @@
     "fetch-teams": "node bin/fetch-teams.js",
     "fetch-bracket": "node -r esm bin/fetch-ncaa-bracket.js",
     "fetch-sr-bracket": "node -r esm bin/fetch-sr-bracket.js",
-    "update-logo": "node -r esm bin/update-logo.js"
+    "update-logo": "node -r esm bin/update-logo.js",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "glob-parent": "6.0.2"
   },
   "author": "Jody Mickey <jody.mickey@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.13.10",
-    "babel-loader": "^8.0.6",
-    "babel-minify-webpack-plugin": "^0.3.1",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "babel-preset-stage-2": "^6.24.1",
     "cheerio": "^1.0.0-rc.5",
-    "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^2.1.1",
-    "fast-sass-loader": "^1.5.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^7.0.0",
-    "nodemon": "^1.19.4",
-    "style-loader": "^0.23.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "fast-sass-loader": "^2.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.21",
+    "npm-force-resolutions": "^0.0.10",
+    "serve": "^14.2.0",
+    "style-loader": "^1.3.0",
     "svgo": "^2.3.0",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^4.2.2"
+    "terser-webpack-plugin": "^5.3.7",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "aws-sdk": "^2.859.0",
-    "axios": "^0.21.1",
+    "axios": "^1.3.4",
     "downloadjs": "^1.4.7",
     "esm": "^3.2.25",
     "netlify-lambda": "^1.6.3"
