--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "fetch-teams": "node bin/fetch-teams.js",
     "fetch-bracket": "node bin/fetch-ncaa-bracket.js",
     "fetch-sr-bracket": "node -r esm bin/fetch-sr-bracket.js",
+    "optimize-logos": "svgo -f src/img/logos -o src/img/logos",
+    "preview-teams": "node bin/preview-teams.js",
     "run-func": "node --env-file=.env bin/run-function.js",
     "update-logo": "node -r esm bin/update-logo.js",
     "preinstall": "npx npm-force-resolutions"
@@ -38,7 +40,7 @@
     "nodemon": "^2.0.21",
     "serve": "^14.2.0",
     "style-loader": "^1.3.0",
-    "svgo": "^2.3.0",
+    "svgo": "^2.8.0",
     "terser-webpack-plugin": "^5.3.7",
     "url-loader": "^4.1.1",
     "webpack": "^5.76.1",
