--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Update Live Bracket
 on:
   schedule:
-    - cron: '*/15 17-23,0-6 * 3,4 2,3,4,5,6,0'
+    - cron: '*/30 * 14-31 3 *'
+    - cron: '*/30 * 01-13 4 *'
 jobs:
   update:
     name: Request Update Function
