--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "dependencies": {
     "aws-sdk": "^2.859.0",
-    "axios": "^1.3.4",
+    "axios": "^1.8.4",
+    "axios-cache-interceptor": "^1.7.0",
     "downloadjs": "^1.4.7",
     "esm": "^3.2.25"
   }
