--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "repository": "https://github.com/jwmickey/circle-bracket",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "nodemon --watch \"webpack.*.js\" --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production",
     "serve": "serve dist",
@@ -27,13 +29,18 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@testing-library/jest-dom": "^6.6.3",
     "babel-loader": "^9.2.1",
+    "canvas": "^3.1.0",
     "cheerio": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "fast-sass-loader": "^2.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "node-sass": "^8.0.0",
     "nodemon": "^3.1.9",
     "serve": "^14.2.0",
