--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^30.0.0-beta.3",
-    "node-sass": "^8.0.0",
     "nodemon": "^3.1.9",
+    "sass": "^1.94.2",
     "serve": "^14.2.0",
     "style-loader": "^1.3.0",
     "svgo": "^2.8.0",
